@@ -15,6 +15,9 @@ Bug-Fixes:
 Fixed bug where Session was closed even if session closing confirm dialog was not confirmed. Connection was 
 not closed in this case.
 
+Fixed bug that caused a stored procedure that returned a mix of update counts and results sets not to be 
+properly displayed.
+
 3.0.1 (3/23/2009)
 ================
 
